Opened 12 years ago
Closed 12 years ago
#10654 closed defect (fixed)
wxLogNull is documented as derived from wxLog. That's wrong.
Reported by: | c32 | Owned by: | |
---|---|---|---|
Priority: | low | Milestone: | |
Component: | documentation | Version: | 2.8.10 |
Keywords: | wxLogNull | Cc: | |
Blocked By: | Blocking: | ||
Patch: | no |
Description
In the documentation of wxLogNull is written:
Derived from
wxLog
But that is wrong. wxLogNull has no base class.
Change History (1)
comment:1 Changed 12 years ago by FM
- Resolution set to fixed
- Status changed from new to closed
Note: See
TracTickets for help on using
tickets.
(In [59946]) fix wxLogNull base class (closes #10654)