fix wxLogNull base class (closes #10654)

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@59946 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775